@@ -5,3 +5,6 @@ envlist=py27,py34,py35,pep8
 deps=-rtest-requirements.txt
      -rrequirements.txt
 commands=py.test dp800tools/tests
+
+[testenv:pep8]
+commands=pep8 dp800tools
